k8s/services/media/app/radarr/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: media
  hostnames:
    - radarr.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: radarr
          port: 80
      timeouts:
        request: 60s
        backendRequest: 60s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: radarr
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: radarr
  oidc:
    provider:
      issuer: https://auth.lama-corp.space/application/o/radarr/
    clientID: radarr
    clientSecret:
      name: radarr-oidc-credentials
    scopes:
      - offline_access
    refreshToken: true
